Re-run backtest

--- a/backtest.ipynb
+++ b/backtest.ipynb
@@ -8,6 +8,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
     "import pickle\n",
     "if not os.path.exists(\"tmp\"):\n",
     "    os.mkdir(\"tmp\")\n",
@@ -15,7 +18,7 @@
     "\tos.mkdir(\"fig\")\n",
     "\n",
     "from typing import cast\n",
-    "from datetime import date, timedelta\n",
+    "from datetime import datetime\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "import polars as pl\n",
@@ -68,10 +71,15 @@
    "source": [
     "# FETCH DATA\n",
     "\n",
+    "from alpaca.data.historical import StockHistoricalDataClient\n",
+    "from alpaca.data.requests import StockBarsRequest\n",
+    "from alpaca.data.timeframe import TimeFrame, TimeFrameUnit\n",
+    "from alpaca.data.enums import DataFeed, Adjustment\n",
+    "\n",
     "def within_threshold(param: str, val: float, threshold = 0.1):    \n",
     "\treturn f\"{param} BETWEEN {val - threshold} AND {val + threshold}\"\n",
     "\n",
-    "def fetch_data(symbol: str, start_date: date, end_date: date, engine=engine):\n",
+    "def fetch_data(symbol: str, start_date: datetime, end_date: datetime, engine=engine):\n",
     "\tquery = text(f\"\"\"\n",
     "\tSELECT\n",
     "\t\toc.date,\n",
@@ -96,12 +104,18 @@
     "\tif df_option_chain.is_empty():\n",
     "\t\traise ValueError(\"No option chain data found for the given symbol and date range.\")\n",
     "\n",
-    "\t# hourly resolution OHLCV data\n",
-    "\tdf_ohlcv = (pl.from_pandas(\n",
-    "\t\tyf.Ticker(symbol).history(start=start_date, end=end_date, interval=\"1h\")\n",
-    "\t\t.rename(columns=str.lower)\n",
-    "\t\t.reset_index(names=\"date\")))\n",
-    " \n",
+    "\t# 1h resolution OHLCV data\n",
+    "\tclient = StockHistoricalDataClient(api_key=os.environ.get(\"APCA_API_KEY_ID\"), secret_key=os.environ.get(\"APCA_API_SECRET_KEY\"))\n",
+    "\trequest_params = StockBarsRequest(\n",
+    "\t\tsymbol_or_symbols=symbol,\n",
+    "\t\ttimeframe=TimeFrame(1, TimeFrameUnit.Hour), # type: ignore\n",
+    "\t\tstart=start_date,\n",
+    "\t\tend=end_date,\n",
+    "\t\tfeed=DataFeed.IEX,\n",
+    "\t\tadjustment=Adjustment.SPLIT,\n",
+    "\t)\n",
+    "\tbars = client.get_stock_bars(request_params)\n",
+    "\tdf_ohlcv = pl.from_pandas(bars.df.loc[symbol].reset_index()) # type: ignore\n",
     "\treturn df_ohlcv, df_option_chain"
    ]
   },
@@ -117,7 +131,7 @@
     "YEAR = 252\n",
     "MONTH = 21\n",
     "WEEK = 5\n",
-    "BARS_PER_DAY = 7\n",
+    "BARS_PER_DAY = 7 # 1h bars\n",
     "\n",
     "def make_strategy(\n",
     "    df_ohlcv: pl.DataFrame,\n",
@@ -133,7 +147,9 @@
     "    lag_period=1,\n",
     "    long_only=False,\n",
     ") -> pl.DataFrame:\n",
+    "    \n",
     "\tvol_ma = pl.col(\"vol\").ewm_mean(half_life=vol_z_hl)\n",
+    " \n",
     "\tvol_sd = pl.col(\"vol\").ewm_std(half_life=vol_z_hl)\n",
     " \n",
     "\tdf_vol = (\n",
@@ -151,13 +167,13 @@
     "\t\t.drop_nulls()\n",
     "\t)\n",
     " \n",
-    "\tday_open = pl.col(\"open\").first().over(\"date_only\")\n",
+    "\tday_open = pl.col(\"open\").first().over(\"date\")\n",
     "\tvol_move_dist = day_open * pl.col(\"vol_d\") * band_std_dev\n",
     "\tdf = (\n",
     "\t\tdf_ohlcv\n",
-    "\t\t.with_columns(date_only = pl.col(\"date\").dt.date())\n",
-    "\t\t.join(df_vol, left_on=\"date_only\", right_on=\"date\", how=\"left\")\n",
-    "\t\t.sort(\"date\")\n",
+    "\t\t.with_columns(date = pl.col(\"timestamp\").dt.date())\n",
+    "\t\t.join(df_vol, on=\"date\", how=\"left\")\n",
+    "\t\t.sort(\"timestamp\")\n",
     "\t\t.fill_null(strategy=\"forward\")\n",
     "\t\t.with_columns(\n",
     "\t\t\t# --- Indicators ---\n",
@@ -440,11 +456,23 @@
     "\t\t\n",
     "\t\tdd_bench_w = compute_drawdown(bench_w)\n",
     "\t\tdd_strat_w = compute_drawdown(strat_w)\n",
+    "\t\t\n",
+    "\t\tbench_stats_w = compute_strategy_stats(df[\"log_ret\"][s].to_numpy())\n",
+    "\t\tstrat_stats_w = compute_strategy_stats(df[\"strat_ret_net\"][s].to_numpy(), df[\"log_ret\"][s].to_numpy())\n",
     "\n",
-    "\t\tindices = list(range(len(data)-4, len(data)))\n",
+    "\t\t# Format values for the table cells\n",
+    "\t\ttable_values = [\n",
+    "\t\t\tlist(bench_stats_w.keys()),\n",
+    "\t\t\t[f\"{v:.2f}\" if not np.isnan(v) else \"\" for v in bench_stats_w.values()],\n",
+    "\t\t\t[f\"{v:.2f}\" if not np.isnan(v) else \"\" for v in strat_stats_w.values()],\n",
+    "\t\t]\n",
+    "    \n",
+    "\t\tplot_indices = list(range(len(data)-4, len(data)))\n",
+    "\t\tindices = [0] + plot_indices\n",
     "\t\trestyle = {\n",
-    "\t\t\t\"y\": [bench_w, strat_w, dd_bench_w, dd_strat_w],\n",
-    "\t\t\t\"x\": [x_axis[s] for _ in range(len(indices))]\n",
+    "\t\t\t\"cells.values\": [table_values] + [None] * len(plot_indices),\n",
+    "\t\t\t\"y\": [None] + [bench_w, strat_w, dd_bench_w, dd_strat_w],\n",
+    "\t\t\t\"x\": [None] + [x_axis[s]] * len(plot_indices),\n",
     "\t\t}\n",
     "\n",
     "\t\t# Layout updates\n",
@@ -474,11 +502,11 @@
     "\t\t\tmatches=\"x\", domain=[0, width],\n",
     "\t\t\tshowticklabels=False, showgrid=False,\n",
     "\t\t\tshowspikes=True, spikemode=\"across\", spikethickness=1,\n",
-    "\t\t\ttickvals=x_axis, ticktext=df[\"date\"].dt.strftime(\"%a %d %b %Y %H:%M %Z\").to_list(),\n",
+    "\t\t\ttickvals=x_axis, ticktext=df[\"timestamp\"].dt.strftime(\"%a %d %b %Y %H:%M %Z\").to_list(),\n",
     "\t\t\trangeslider=dict(visible=False)\n",
     "\t\t),\n",
     "\t\tyaxis =dict(domain=ydomains[0], title=\"Price\", automargin=True),\n",
-    "\t\tyaxis2=dict(domain=ydomains[1], title=f\"Vol EMA({strategy_params['vol_z_hl']})\", automargin=True),\n",
+    "\t\tyaxis2=dict(domain=ydomains[1], title=f\"Vol\", automargin=True),\n",
     "\t\tyaxis3=dict(domain=ydomains[2], title=\"Vol Z-Score\", automargin=True),\n",
     "\t\tyaxis4=dict(domain=ydomains[3], title=\"Position\", automargin=True),\n",
     "\t\tyaxis5=dict(domain=ydomains[4], title=\"Returns\", automargin=True),\n",
@@ -644,7 +672,7 @@
     "\n",
     "\n",
     "def plot_lag_sensitivity(lag_results: pd.DataFrame, lag_paths: list[tuple[int, pl.Series]]):\n",
-    "\tfig = make_subplots(rows=3, cols=1, subplot_titles=[\"Paths\", \"Sharpe Ratio\", \"Annualized Alpha (%)\"], row_heights=[1.5, 1, 1], vertical_spacing=0.075)\n",
+    "\tfig = make_subplots(rows=4, cols=1, subplot_titles=[\"Paths\", \"Sharpe Ratio\", \"Annualized Alpha (%)\", \"Beta (vs Asset)\"], row_heights=[1.5, 1, 1, 1], vertical_spacing=0.075)\n",
     "\tfig.add_traces([\n",
     "\t\tgo.Scatter(\n",
     "\t\t\tx=np.arange(len(path)),\n",
@@ -674,7 +702,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "\tfor row, metric in enumerate([\"Sharpe Ratio\", \"Annualized Alpha (%)\"], start=2):\n",
+    "\tfor row, metric in enumerate([\"Sharpe Ratio\", \"Annualized Alpha (%)\", \"Beta (vs Asset)\"], start=2):\n",
     "\t\t\n",
     "\t\tX = lag_results[\"lag_period\"].to_numpy().reshape(-1, 1)\n",
     "\t\ty = lag_results[metric].to_numpy()\n",
@@ -792,13 +820,14 @@
    "outputs": [],
    "source": [
     "symbol = \"SPY\"\n",
-    "start_date = (end_date := date.today()) - timedelta(days=729)\n",
+    "start_date = datetime(year=2020, month=1, day=1)\n",
+    "end_date = datetime.today()\n",
     "\n",
     "BAND_STD_DEV = 0.8\n",
-    "VOL_Z_HL = WEEK // 2\n",
+    "VOL_Z_HL = WEEK\n",
     "VOL_Z_ENTRY_THRESHOLD = 0\n",
-    "ATR_PERIOD = BARS_PER_DAY * 4\n",
-    "ATR_MULTIPLIER = 2.5\n",
+    "ATR_PERIOD = WEEK * BARS_PER_DAY\n",
+    "ATR_MULTIPLIER = 3.0\n",
     "\n",
     "strategy_params = {\n",
     "\t\"band_std_dev\": BAND_STD_DEV,\n",
@@ -808,8 +837,12 @@
     "\t\"atr_multiplier\": ATR_MULTIPLIER\n",
     "}\n",
     "\n",
-    "df_ohlcv, df_option_chain = fetch_data(symbol, start_date, end_date)\n",
-    "df = make_strategy(df_ohlcv, df_option_chain, long_only=False, **strategy_params)"
+    "if \"loaded\" not in globals() or loaded != symbol: # type: ignore\n",
+    "\tprint (f\"Fetching {symbol} data\")\n",
+    "\tdf_ohlcv, df_option_chain = fetch_data(symbol, start_date, end_date)\n",
+    "\tloaded = symbol\n",
+    " \n",
+    "df = make_strategy(df_ohlcv, df_option_chain, **strategy_params) # type: ignore"
    ]
   },
   {
@@ -822,7 +855,7 @@
     "# PLOT STRATEGY\n",
     "\n",
     "fig = plot_strategy(df, strategy_params) \\\n",
-    "    .update_layout(title=f\"{symbol}: Future-Implied Vol. Band Strategy\", width=1200, height=900)\n",
+    "    .update_layout(title=f\"{symbol}: Implied Vol. Band Strategy<br>{start_date.strftime(\"%b %Y\")} to {end_date.strftime(\"%b %Y\")}\", width=1200, height=900)\n",
     "fig.write_image(f\"fig/{symbol}_strategy.jpg\")\n",
     "fig.show()"
    ]
